Fixed button and sections alignment

--- a/src/styles/blocks/categories.scss
+++ b/src/styles/blocks/categories.scss
@@ -1,5 +1,5 @@
 .categories {
-  padding: 0 20px;
+  // padding: 0 20px;
   grid-column: 1 /3;
 
 
