--- a/src/styles/blocks/recommended.scss
+++ b/src/styles/blocks/recommended.scss
@@ -1,5 +1,5 @@
 .recommended {
-  padding: 64px 20px;
+  padding: 64px 0px;
   grid-column: 1 /3;
 
   &__products {
