--- a/src/styles/blocks/section.scss
+++ b/src/styles/blocks/section.scss
@@ -13,7 +13,7 @@
     flex-direction: column;
     margin-bottom: 40px;
     box-sizing: border-box;
-    min-height: 100vh;
+    // min-height: 100vh;
   }
 
   &__catalog {
@@ -31,7 +31,7 @@
 
   &__footer {
     box-sizing: border-box;
-    min-height: 100vh;
+    // min-height: 100vh;
     padding: 64px 20px 68px;
 
     @include grid;
